<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#e9ffff"
    tools:context=".MainActivity">

    <include layout="@layout/content_main"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/start"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/bstart"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/load"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="top|center"
        android:text="@string/bload"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/gallery"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="top|center"
        android:text="@string/bGallery"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/option"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/boption"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/bexit"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/smark"
        android:layout_gravity="center"/>

</LinearLayout>
