<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    android:padding="10dp"
    tools:context=".OptionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Option"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="#a0f0ff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Volume"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="6"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/minvolume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"/>

            <SeekBar
                android:id="@+id/volume"
                android:max="15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                />

            <Button
                android:id="@+id/plusvolume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/credit"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/bcredit"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/babout"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/bback"
        android:textStyle="bold"
        />

</LinearLayout>
